DnD: drop performs to a wrong window from X11 client on Wayland
Affected version
Fedora 36 (Rawhide) / GNOME Shell 42.alpha
Bug summary
Can't perform a Drag and Drop operation from X11 client to a Wayland client if there is an intermediate window during the drag.
Steps to reproduce
- Compile and run X11 client XDnDSource.c by
gcc XDnDSource.c -o XDnDSource -lX11 && ./XDnDSource
- Place windows like this:
Where:- Our DnD source an X11 client.
- terminal window
- gedit window
- Try to perform DnD from Window#1 to Window#3 over Window#2
What happened
Text is dropped to Window#2
What did you expect to happen
Text is dropped to Window#3
Relevant logs, screenshots, screencasts etc.
Success on X11: x11.log
Failure on Wayland: wl.log
This case may be sometimes successful though if you switch Window#1 and Window#3 positions(gedit on a left side, X11 source on the right, it may fail for me depending on drag speed).
Success on Wayland: wlSuccess.log
This issue also can be reproduced with example from Gtk3 Python tutorial(with GDK_BACKEND="x11"
set and text radio button selected).